[tool.poetry]
name = "fedjax_tutorial"
version = "0.1.0"
description = ""
authors = ["Andrei <andrei@integrate.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
fedjax = "*"
pylint = "2.5.3"
astroid = "2.5.0"
tensorflow = "2.5.0"
tensorflow_datasets = "*"
dm-haiku = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
